--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="https://unread.today/img/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
     <title>Нүүр | Unread Today</title>
@@ -14,13 +14,13 @@
 <body>
     <header>
         <div class="header">
-            <span class="las la-bars" id="bar-icon"></span>
+            <span class="fa fa-align-left" id="bar-icon"></span>
             <div class="mid-nav">
                 <div class="left-nav">
                     <img src="asset/logo.png" class="logo">
                     <p>|</p>
                     <div style="display: flex;">
-                        <span class="las la-search" id="search"></span>
+                        <span class="fa fa-search" id="search"></span>
                         <input placeholder="Хайлт хийх" id="search-input">
                     </div>
                 </div>
@@ -31,10 +31,10 @@
                 </div>
             </div>
             <div class="social-icons">
-                <span class="lab la-facebook-square"></span>
-                <span class="lab la-instagram"></span>
-                <span class="lab la-twitter"></span>
-                <span class="lab la-linkedin-in"></span>
+                <span class="fa fa-facebook-official"></span>
+                <span class="fa fa-instagram"></span>
+                <span class="fa fa-twitter"></span>
+                <span class="	fa fa-linkedin"></span>
             </div>
         </div>
     </header>
@@ -72,63 +72,63 @@
         <div class="editors-choice">
             <p>Редакцын сонголт</p>
             <div class="pre-and-next">
-                <span class="las la-angle-left"></span>
-                <span class="las la-angle-right"></span>
+                <span class="fa fa-angle-left"></span>
+                <span class="fa fa-angle-right"></span>
             </div>
         </div>
         <div class="slider-container">
             <div class="slider">
-                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item1.jpeg);">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item1.jpeg);background-position: center;background-size: cover;">
                     <div class="item-header">
                         <div class="liveDot"></div>
                         <p>1 мин</p>
                     </div>
                     <div class="item-content">
-                        <div><span class="las la-eye"></span>3525<span class="las la-comment-alt"></span>0</div>
+                        <div><span class="fa fa-eye"></span>3525<span class="fa fa-comment"></span>0</div>
                         <h2>Гэрэл зурагчин Макс Мюнх</h2>
                         <div class="category">Би хэрхэн ажилладаг вэ?</div>
                     </div>
                 </div>
-                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item2.jpeg);">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item2.jpeg);background-position: center;background-size: cover;">
                     <div class="item-header">
                         <div class="liveDot"></div>
                         <p>8 мин</p>
                     </div>
                     <div class="item-content">
-                        <div><span class="las la-eye"></span>10153<span class="las la-comment-alt"></span>0</div>
+                        <div><span class="fa fa-eye"></span>10153<span class="fa fa-comment"></span>0</div>
                         <h2> Гадаад хэл сурахад нас оройтдог уу? + Шинжлэх ухааны 5 баримт </h2>
                         <div class="category"> Мэдүүштэй </div>
                     </div>
                 </div>
-                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item3.jpeg);">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item3.jpeg);background-position: center;background-size: cover;">
                     <div class="item-header">
                         <div class="liveDot"></div>
                         <p>2 мин</p>
                     </div>
                     <div class="item-content">
-                        <div><span class="las la-eye"></span>5677<span class="las la-comment-alt"></span>0</div>
+                        <div><span class="fa fa-eye"></span>5677<span class="fa fa-comment"></span>0</div>
                         <h2>Биднийг унтаж байхад Meta-гийн танилцуулсан бүх зүйл</h2>
                         <div class="category">techworm</div>
                     </div>
                 </div>
-                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item4.jpeg);">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item4.jpeg);background-position: center;background-size: cover;">
                     <div class="item-header">
                         <div class="liveDot"></div>
                         <p>3 мин</p>
                     </div>
                     <div class="item-content">
-                        <div><span class="las la-eye"></span>2947<span class="las la-comment-alt"></span>0</div>
+                        <div><span class="fa fa-eye"></span>2947<span class="fa fa-comment"></span>0</div>
                         <h2>Сониноос сорчилъё: УЛААН vs БААТАР /2024.09.23/</h2>
                         <div class="category">Мэдүүштэй</div>
                     </div>
                 </div>
-                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item5.jpeg);">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item5.jpeg);background-position: center;background-size: cover;">
                     <div class="item-header">
                         <div class="liveDot"></div>
                         <p>6 мин</p>
                     </div>
                     <div class="item-content">
-                        <div><span class="las la-eye"></span>19407<span class="las la-comment-alt"></span>0</div>
+                        <div><span class="fa fa-eye"></span>19407<span class="fa fa-comment"></span>0</div>
                         <h2>Яг одоо туршаад үз: iOS 18-аас онцлох 18 өөрчлөлт</h2>
                         <div class="category">techworm</div>
                     </div>
@@ -137,7 +137,7 @@
         </div>
     </div>
     <main>
-        <div>
+        <div class="content-item-left">
             <div class="account">
                 <img src="asset/profile1.jpeg" class="accImg">
                 <div>
@@ -185,7 +185,7 @@
                 <img src="asset/main1.jpeg" class="main-img">
             </div>
         </div>
-        <div>
+        <div class="content-item-left">
             <div class="account">
                 <img src="asset/profile1.jpeg" class="accImg">
                 <div>
@@ -233,7 +233,7 @@
                 <img src="asset/main1.jpeg" class="main-img">
             </div>
         </div>
-        <div>
+        <div class="content-item-left">
             <div class="account">
                 <img src="asset/profile1.jpeg" class="accImg">
                 <div>
@@ -255,6 +255,142 @@
                     <h1>10 тоонд: Нобелийн шагнал</h1>
                 </div>
                 <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+        <div class="info-selector">
+            <div class="dates">Өнгөрсөн 7 хоногт</div>
+            <div class="dates">09/30 - 10/06</div>
+            <div class="dates">09/23 - 09/29</div>
+            <div class="dates">09/16 - 09/22</div>
+        </div>
+        <div class="contents">
+            <div class="content" style="grid-row:1/3; grid-column: 1/3;background-image: url(content-img/1.png);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    Утга зохиолын Нобелийн шагналтнуудын <br>бүтээлээс унших ёстой 10 ном
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/2.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/3.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="grid-row: 2/4;background-image: url(content-img/4.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="grid-row: 2/4;background-image: url(content-img/5.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/6.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/7.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contents">
+            <div class="content" style="grid-row:1/3; grid-column: 1/3;background-image: url(content-img/1.png);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    Утга зохиолын Нобелийн шагналтнуудын <br>бүтээлээс унших ёстой 10 ном
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/2.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/3.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="grid-row: 2/4;background-image: url(content-img/4.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="grid-row: 2/4;background-image: url(content-img/5.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/6.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content" style="background-image: url(content-img/7.jpeg);">
+                <div class="content-title">
+                    <div class="content-category">jkl</div>
+                    dfg
+                    <div class="content-timer">
+                        12 мин
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -276,7 +412,7 @@
                                 Контент нийтлүүлэх          
                             </div>
                             <div class="circle-button">
-                                <span class="las la-angle-right"></span>
+                                <span class="fa fa-angle-right"></span>
                             </div>
                         </div>
                     </div>
@@ -289,7 +425,7 @@
                                 Эвент дээр хамтрах         
                             </div>
                             <div class="circle-button">
-                                <span class="las la-angle-right"></span>
+                                <span class="fa fa-angle-right"></span>
                             </div>
                         </div>
                     </div>
@@ -313,49 +449,43 @@
                     © 2015-2024 Анрид Медиа ХХК. Бүх эрх хуулиар хамгаалагдсан. Контентуудыг зөвшөөрөлгүйгээр болон дурдалгүйгээр нийтлэх, хэвлэх, эш татахыг хориглоно.
                 </div>
                 <div class="three-columns">
-                    <div class="column">
-                        <h4>Булангууд</h4>
-                        <p>Онцлох бизнес</p>
-                        <p>Techworm</p>
-                        <p>Би хэрхэн ажилладаг вэ?</p>
-                        <p>Мэдүүштэй</p>
-                        <p>Чөлөөт</p>
-                        <p>Номын тухай</p>
-                        <p>7 хоногийн тойм</p>
-                        <p>Өртөөлөгчид</p>
-                    </div>
-                    <div class="column">
-                        <h4>Булангууд</h4>
-                        <p>Онцлох бизнес</p>
-                        <p>Techworm</p>
-                        <p>Би хэрхэн ажилладаг вэ?</p>
-                        <p>Мэдүүштэй</p>
-                        <p>Чөлөөт</p>
-                        <p>Номын тухай</p>
-                        <p>7 хоногийн тойм</p>
-                        <p>Өртөөлөгчид</p>
-                    </div>
-                    <div class="column">
-                        <h4>Булангууд</h4>
-                        <p>Онцлох бизнес</p>
-                        <p>Techworm</p>
-                        <p>Би хэрхэн ажилладаг вэ?</p>
-                        <p>Мэдүүштэй</p>
-                        <p>Чөлөөт</p>
-                        <p>Номын тухай</p>
-                        <p>7 хоногийн тойм</p>
-                        <p>Өртөөлөгчид</p>
-                    </div>
+                    <div class="column-title">Булангууд</div>
+                    <div></div>
+                    <div class="column-title">Компани</div>
+                    <div>Онцлох бизнес</div>
+                    <div>Тогтвортой хөгжил</div>
+                    <div style="grid-column: 3/4; grid-row: 2/4;">Улаанбаатар 14240 СБД, 8-р хороо, Амарын гудамж,</div>
+                    <div>Techworm</div>
+                    <div>Тайлбарлах нь</div>
+                    <div>Би хэрхэн ажилладаг вэ?</div>
+                    <div>10 ертөнц, 10 өнцөг</div>
+                    <div>Тэнгэрлиг медиа групп</div>
+                    <div>Мэдүүштэй</div>
+                    <div>Таатай оффис</div>
+                    <div>+976 9921 2778</div>
+                    <div>Чөлөөт</div>
+                    <div>Зочинтой булан</div>
+                    <div>+976 8801 3893</div>
+                    <div>Номын тухай</div>
+                    <div>8 минутын улс төр</div>
+                    <div></div>
+                    <div>7 хоногийн тойм</div>
+                    <div>English</div>
+                    <div>Зочлох</div>
+                    <div>Өртөөлөгчид</div>
+                    <div></div>
+                    <div style="color: white;">www.unread.media</div>
+                    
                 </div>
             </div>
         </div>
         <div class="footer-icons">
-            <span class="lab la-facebook-square"></span>
-            <span class="lab la-twitter"></span>
-            <span class="lab la-instagram"></span>
-            <span class="lab la-linkedin-in"></span>
-            <span class="lab la-youtube"></span>
-            <span class="lab la-soundcloud"></span>
+            <span class="fa fa-facebook-official"></span>
+            <span class="fa fa-twitter"></span>
+            <div class="cropped-image"><i class="fa fa-instagram" style="font-size:40px; color: transparent;"></i></div>
+            <span class="fa fa-linkedin"></span>
+            <span class="fa fa-youtube-play"></span>
+            <span class="fa fa-soundcloud"></span>
         </div>
     </footer>
 </body>
